# barebones-bazel

./: .gitignore  MODULE.bazel  README.md
go-basics/: BUILD.bazel  README.md
go-gazelle-basics/: BUILD.bazel  MODULE.bazel  README.md  go.mod
go-gazelle-basics/client/: BUILD.bazel  go.mod  main.go
go-gazelle-basics/currency/: BUILD.bazel  converter.go  go.mod
go-gazelle-level-up/client/: go.mod  main.go
go-level-up/: MODULE.bazel  README.md  go.mod
go-level-up/client/: BUILD.bazel  go.mod  main.go
go-level-up/currency/: BUILD.bazel  converter_test.go  go.mod
