load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "currency",
    srcs = ["converter.go"],
    importpath = "github.com/bochap-learning/barebones-bazel/go-gazelle-basics/currency",
    visibility = ["//visibility:public"],
)

go_test(
    name = "currency_test",
    srcs = ["converter_test.go"],
    embed = [":currency"],
)
